pkl: fix memory overrun in pkl_loc_to_source
2022-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-diag.c (pkl_loc_to_source): Fix memory overrun.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-10-28  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-diag.c (pkl_loc_to_source): Fix memory overrun.
+
 2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pvm-val.c (pvm_make_array_type): Add an assertion
