--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-asm.pks (atrim): Fix boundaries checking for empty
+	arrays.
+	* testsuite/poke.pkl/trim-36.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2022-10-31  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-rt.pk (_pkl_aoref): Array element offsets are
