--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.c (pkl_ast_sizeof_type): Add assertion.
+
+2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-asm.pks (atrim): Fix boundaries checking for empty
 	arrays.
 	* testsuite/poke.pkl/trim-36.pk: New test.
