--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-11-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-gen.pks (struct_mapper): Handle integral unions.
+	* testsuite/poke.map/maps-int-union-6.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
 2022-11-03  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-cmd-misc.c (pk_cmd_jmd): New quote.
