--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2022-11-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* pickles/riscv.pk (RV32_Insn): Make it integral union and
+	remove `as_uint' method.
+
+2022-11-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* libpoke/pkl-gen.pks (struct_mapper): Handle integral unions.
 	* testsuite/poke.map/maps-int-union-6.pk: New test.
 	* testsuite/Makefile.am (EXTRA_DIST): Update.
