gen: handle constraint errors and eof in integral union fields properly
2022-11-11  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_field_extractor): Keep the right
	lexical environment when subpassing results in a constraint
	exception.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-11-11  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.pks (struct_field_extractor): Keep the right
+	lexical environment when subpassing results in a constraint
+	exception.
+
 2022-11-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* etc/vim/syntax/poke.vim (keyword): Add `computed' to the list
