--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-11-13  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm.jitter: Change `map' instruction to not raise
+	exceptions.
+
 2022-11-11  Arsen Arsenović  <arsen@aarsen.me>
 
 	* .gitmodules: Upgrade to HTTPS URLs.
