--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-11-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-lex.l (build_overflow_error_msg): Use PRIu64 instead
+	of `lu'.
+
 2022-11-21  Arsen Arsenović  <arsen@aarsen.me>
 
 	* etc/hacking.org (Continuous Integration): Document the
