--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2022-11-27  Arsen Arsenović  <arsen@aarsen.me>
+
+	* bootstrap: Sync with Gnulib.
+	* autopull.sh: New file from Gnulib, as a result of sync.
+	* autogen.sh: Ditto.
+	* bootstrap-funclib.sh: Ditto.
+	* bootstrap.conf (bootstrap_print_option_usage_hook): Fix help
+	string alignment.
+	(bootstrap_post_import_hook): Default JITTER_SRCDIR to Jitter,
+	die-guard cd "${JITTER_SRCDIR}" to prevent recursing, move Jitter
+	submodule update code...
+	(bootstrap_post_pull_hook): ... to this new hook.
+	(bootstrap_option_hook): Export JITTER_SRCDIR.
+	* gnulib: Update to newest.
+
 2022-11-24  Arsen Arsenović  <arsen@aarsen.me>
 
 	* poke/poke.c (poke_getopt_string): Extract the getopt string, to
