--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,13 @@
 2022-12-10  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-insn.def: Define oover.
+	* libpoke/pvm.jitter (oover): New instruction.
 	* libpoke/pkl-rt.pk (PK_TV_FIELD_CONSTRUCTED): Define.
-	* libpoke/pkl-gen.pks (emit_field_event): New macro.
+	* libpoke/pkl.h (PK_TV_FIELD_CONSTRUCTED): Likewise.
+	* libpoke/pkl-gen.pks (emit_tv_field_event): New macro.
+	(struct_field_mapper): Use it.
+	(struct_field_constructor): Emit an event for constructed fields.
+	(typeof): Eval to PVM_NULL if the requested typeof is for Pk_Type.
 	* poke/pk-tracer.pk (pk_tv_action_field_mapped_constructed):
 	Rename from pk_tv_action_field_mapped and adapted to handle both
 	events.
