doc: Simplify steps for hyperlink setup. Use `make install` and avoid talking about .desktop files
2022-12-22  Darshit Shah  <darnir@gnu.org>

        * doc/poke.texi: Simplify Hyperlink setup by calling `make install`

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-12-22  Darshit Shah  <darnir@gnu.org>
+
+	* doc/poke.texi: Simplify Hyperlink setup by calling `make install`
+
 2022-12-10  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.pks (struct_constructor): Emit
