--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-rt.pk (getenv): Avoid calling the `gettenv'
+	instruction twice.
+
+2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-rt.pk (_pkl_stroref): Make immutable.
 	(_pkl_aoref): Likewise.
 	(_pkl_aoref_complete): Likewise.
